--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "windows": "react-native run-windows"
+    "windows": "react-native run-windows",
+    "compile": "npx tsc"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "react": "17.0.2",
     "react-native": "^0.65.0",
-    "react-native-windows": "0.65.8"
+    "react-native-windows": "0.65.8",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.66.16",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
