--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-native": "^0.65.0",
     "react-native-windows": "0.65.8",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -28,6 +29,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.65.1",
+    "@types/lodash": "^4.14.170",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
