--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "DraggableFlatList",
-  "version": "0.0.3",
+  "version": "0.0.4",
+  "main": "index.js",
   "private": true,
   "author": {
     "name": "Tero Paananen",
