src folder for js code added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
       "*": ["src/*"]
     }
   },
-  "include": ["*"]
+  "include": ["*", "src/App.tsx", "src/DraggableItem.tsx", "src/DraggableFlatList.tsx"]
 }
