--- a/package.json
+++ b/package.json
@@ -35,7 +35,14 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.13",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "eslint-plugin-react": "^7.21.3",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.3.2"
   },
   "jest": {
     "preset": "react-native"
